@@ -42,7 +42,7 @@ Escape (in full screen mode):
 	Switch to windowed mode
 Ctrl+F:
 	Toggle full screen
-Ctr+0/½, Ctrl+1, Ctrl+2:
+0/½, 1, 2:
 	Zoom respectively to 50%, 100% and 200% of the video's original size
 Left arrow:
 	Go back 15 seconds
@@ -76,6 +76,8 @@ Ctrl+Q:
 	Quit
 Ctrl+R, Ctrl+T:
 	Zoom in and zoom out, respectively
+Ctrl+0:
+	Reset the zoom level
 Ctrl+K:
 	Show the "Skip to" dialog
 Ctrl+D:
