@@ -1,3 +1,9 @@
+2008-08-13  Bastien Nocera  <hadess@hadess.net>
+
+	* README:
+	* data/totem.ui: Fix "Fit window to movie" and "Zoom reset"
+	keyboard shortcuts (Closes: #546281)
+
 2008-08-12  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
 	Based on patch by: Robin Stocker <robin at nibor org>
